[gd_scene load_steps=13 format=2]

[ext_resource path="res://backgrounds/Tutorial.tscn" type="PackedScene" id=1]
[ext_resource path="res://character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tutorial_to_clean.gd" type="Script" id=3]
[ext_resource path="res://scenes/tutorial_module.gd" type="Script" id=4]
[ext_resource path="res://utils/Helper.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/Acme-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://utils/AppearingText.tscn" type="PackedScene" id=7]
[ext_resource path="res://character/utils/directionals.png" type="Texture" id=8]
[ext_resource path="res://utils/spacebar.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.0
height = 116.0

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 128
outline_size = 4
use_filter = true
font_data = ExtResource( 6 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 4 )

[node name="HandBody" parent="." instance=ExtResource( 5 )]
position = Vector2( 904, 322 )
rotation = 1.5708
move_x = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 134, 446 )
scale = Vector2( 3.2, 3.2 )

[node name="Tutorial" parent="." instance=ExtResource( 1 )]

[node name="NextArea" type="Area2D" parent="."]
position = Vector2( 57, 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextArea"]
position = Vector2( 992, 464 )
shape = SubResource( 1 )

[node name="AppearingText" parent="." instance=ExtResource( 7 )]

[node name="Directionals" type="CenterContainer" parent="." groups=["texts"]]
margin_left = -12.0
margin_top = -61.5
margin_right = 2316.0
margin_bottom = 599.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Directionals"]
position = Vector2( 2147.5, 333.75 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Directionals"]
margin_left = 332.0
margin_top = 249.0
margin_right = 1995.0
margin_bottom = 412.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Puedes moverte con las flechitas: "
align = 1
valign = 1

[node name="GoToTarget" type="CenterContainer" parent="." groups=["texts"]]
margin_left = 48.0
margin_top = -61.5
margin_right = 2376.0
margin_bottom = 599.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="TargetHelper" parent="GoToTarget" instance=ExtResource( 5 )]
position = Vector2( 2022.5, 436.25 )
rotation = -3.14159
scale = Vector2( 2.5, 2.5 )

[node name="Label" type="Label" parent="GoToTarget"]
margin_left = 599.0
margin_top = 249.0
margin_right = 1729.0
margin_bottom = 412.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Acércate al lavamanos"
align = 1
valign = 1

[node name="PressSpaceBar" type="CenterContainer" parent="." groups=["texts"]]
margin_left = -12.0
margin_top = -61.5
margin_right = 2316.0
margin_bottom = 599.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="PressSpaceBar"]
margin_left = 416.0
margin_top = 249.0
margin_right = 1911.0
margin_bottom = 412.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Presiona la barra espaciadora:"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="PressSpaceBar"]
position = Vector2( 2150, 308.75 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 9 )

[node name="Score" type="CenterContainer" parent="." groups=["texts"]]
margin_left = -78.0
margin_top = -51.0
margin_right = 2250.0
margin_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="Score"]
margin_left = 472.0
margin_top = 166.0
margin_right = 1856.0
margin_bottom = 495.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Este número representa tus
respuestas correctas"
align = 1
valign = 1

[node name="ScoreHelper" parent="Score" instance=ExtResource( 5 )]
position = Vector2( 2112.5, 667.5 )
scale = Vector2( 2.5, 2.5 )

[node name="Mistakes" type="CenterContainer" parent="." groups=["texts"]]
margin_left = -78.0
margin_top = -51.0
margin_right = 2250.0
margin_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="Mistakes"]
margin_left = 472.0
margin_top = 166.0
margin_right = 1856.0
margin_bottom = 495.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Este número representa tus
respuestas incorrectas"
align = 1
valign = 1

[node name="MistakesHelper" parent="Mistakes" instance=ExtResource( 5 )]
position = Vector2( 2465, 667.5 )
scale = Vector2( 2.5, 2.5 )

[node name="QuestionRead" type="CenterContainer" parent="." groups=["texts"]]
margin_left = 48.0
margin_top = 288.5
margin_right = 2376.0
margin_bottom = 949.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="QuestionRead"]
margin_left = 574.0
margin_top = 83.0
margin_right = 1753.0
margin_bottom = 578.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Esta es una pregunta,
en ella tendrás
3 opciones de respuesta"
align = 1
valign = 1

[node name="QuestionRead2" type="CenterContainer" parent="." groups=["texts"]]
margin_left = 48.0
margin_top = 316.5
margin_right = 2376.0
margin_bottom = 977.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="QuestionRead2"]
margin_left = 541.0
margin_right = 1786.0
margin_bottom = 661.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Cambia de opción con las
flechitas y selecciona tu
respuesta con la barra
espaciadora"
align = 1
valign = 1

[node name="FinishedTutorial" type="CenterContainer" parent="." groups=["texts"]]
margin_left = 48.0
margin_top = 126.5
margin_right = 2376.0
margin_bottom = 787.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.4, 0.4 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="FinishedTutorial"]
margin_left = 517.0
margin_right = 1811.0
margin_bottom = 661.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Has terminado el tutorial.
Cuando quieras pasar al 
juego real, ve al borde de
la pantalla"
align = 1
valign = 1

[connection signal="area_entered" from="NextArea" to="NextArea" method="_on_NextArea_area_entered"]
[connection signal="body_entered" from="NextArea" to="NextArea" method="_on_NextArea_body_entered"]
